<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trzeci</string>
    <string name="action_settings">Settings</string>
    <string name="find_devices">Find Devices</string>
    <string name="connection">Status połączenia:</string>
    <string name="ip">169.254.20.177</string>
    <string name="create_new">Create new file</string>
    <string name="dialog_title">Select file to work</string>
    <string name="create">Create new file</string>
    <string name="open_file">Open file</string>
    <string name="text">test</string>
    <string name="name">nazwa</string>
    <string name="tekstEdytowalny">nazwa</string>
    <string name="device_name">Nazwa urządzenia</string>
    <string name="title_paired_devices">title_paired_devices</string>
    <string name="device_details">Szczegóły</string>
    <string name="WybranePlikiString">List of your last edited files:</string>
    <string name="go_back">Go back</string>
    <string name="GoToWifi">Try Wifi</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="find">Find</string>

</resources>