<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_devices" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_file" />

        <Button
            android:id="@+id/GoToWifiActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GoToWifi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true" >
		
        <TextView 
            android:id="@+id/TextViewWybranePliki"
            android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="10dip"
		    android:text="@string/WybranePlikiString"
		    android:textSize="20sp"
            />
        <ListView
		 	android:id="@+id/list_of_opened_files"
		 	android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:layout_marginTop="10dip"
		    android:layout_marginLeft="10dip"
		 />
        
    </LinearLayout>

</LinearLayout>